# PyroPlatform

./: .gitmodules  CMakeLists.txt  Config.cmake  README.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows-msvc.yml
src/: CMakeLists.txt
src/PyroPlatform/: Core.hpp  Factory.cpp  Factory.hpp  Forward.hpp
src/PyroPlatform/File/: IDynamicLibrary.hpp  IFileSystem.hpp  ILibraryLoader.hpp
src/PyroPlatform/Time/: IClock.hpp
src/PyroPlatform/Window/: ICursor.hpp  IMonitor.hpp  IWindow.hpp  IWindowInput.hpp  IWindowManager.hpp  WindowEvents.hpp
src/PyroPlatform/Window/Input/: CharInputEvent.hpp  CursorEnterEvent.hpp  CursorPositionEvent.hpp  CursorScrollEvent.hpp  InputEvent.hpp  InputEventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp  Types.hpp  WindowCloseEvent.hpp  WindowFocusEvent.hpp  WindowPositionEvent.hpp  WindowResizeEvent.hpp
tests/: CMakeLists.txt  TestWindowInput.cpp
tests/Stubs/: WindowStub.hpp
