cmake_minimum_required(VERSION 3.28)
project(PyroPlatform)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

foreach(OUTPUTCONFIG Debug Release RelWithDebInfo MinSizeRel)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/lib")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/bin")
    set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/bin")
endforeach()

if (MSVC)
add_compile_options(
 /Zc:preprocessor   # libassert preprocessor issues
 /MP                # multithreading 
)

add_compile_options()
endif()

include(Config.cmake)

if(NOT DEFINED PYRO_COMMON_DIR)
    set(PYRO_COMMON_BUILD_TESTS OFF)
    set(PYRO_COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vendor/PyroCommon" CACHE PATH "Path to PyroCommon")
    message(STATUS "PYRO_COMMON_DIR not set, defaulting to ${PYRO_COMMON_DIR}")
endif()

# Make sure the folder exists
if(NOT EXISTS "${PYRO_COMMON_DIR}/CMakeLists.txt")
    message(FATAL_ERROR "PyroCommon not found at ${PYRO_COMMON_DIR}")
endif()

# Binary folder for PyroCommon inside your build tree
set(PYRO_COMMON_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/PyroCommon")

# ==== Project Config ====

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if (PYRO_PLATFORM_BUILD_TESTS)
enable_testing()
endif()

add_subdirectory(vendor)

add_subdirectory(src)

if (PYRO_PLATFORM_BUILD_TESTS)
add_subdirectory(tests)
endif()


set(COMPILE_COMMANDS_FILE "${CMAKE_BINARY_DIR}/compile_commands.json")
set(DESTINATION_FILE "${CMAKE_SOURCE_DIR}/compile_commands.json")

if(EXISTS "${CMAKE_BINARY_DIR}/compile_commands.json")
  # Add a custom command to copy compile_commands.json after the build
  add_custom_command(OUTPUT "${CMAKE_SOURCE_DIR}/compile_commands.json"
    COMMAND ${CMAKE_COMMAND} -E copy
            "${CMAKE_BINARY_DIR}/compile_commands.json"
            "${CMAKE_SOURCE_DIR}"
    DEPENDS "${CMAKE_BINARY_DIR}/compile_commands.json"
    COMMENT "Copying compile_commands.json to source directory"
  )

  # Make sure the custom command runs as part of the build. This attaches the
  # command to the ALL target, meaning it runs every time you build the project.
  add_custom_target(CopyCompileCommands ALL
    DEPENDS "${CMAKE_SOURCE_DIR}/compile_commands.json"
  )
else()
  message(STATUS "compile_commands.json not found in build directory.  Skipping copy.")
endif()
